--- a/pom.xml
+++ b/pom.xml
@@ -73,7 +73,7 @@
 			<artifactId>eventuate-tram-sagas-spring-participant</artifactId>
 			<version>0.15.2.RELEASE</version>
 		</dependency>
-		
+
 		<!-- FOR THE CDC -->
 		<!-- https://mvnrepository.com/artifact/io.eventuate.tram.core/eventuate-tram-spring-producer-jdbc -->
 		<dependency>
@@ -100,6 +100,13 @@
 			<groupId>de.unistuttgart.t2</groupId>
 			<artifactId>common</artifactId>
 			<version>1.0-SNAPSHOT</version>
+		</dependency>
+
+		<!-- TESTS?!?! -->
+		<dependency>
+			<groupId>de.flapdoodle.embed</groupId>
+			<artifactId>de.flapdoodle.embed.mongo</artifactId>
+			<scope>test</scope>
 		</dependency>
 
 	</dependencies>
