fix properties, prepare for docker

--- a/src/main/resources/application.local.properties
+++ b/src/main/resources/application.local.properties
@@ -1,3 +1,5 @@
+dockerspring.data.mongodb.uri= mongodb://localhost:27017/inventory
+
 spring.datasource.url=jdbc:postgresql://localhost/eventuate
 spring.datasource.username=eventuate
 spring.datasource.password=eventuate
