improved data generation, added test for data generation

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,3 +7,5 @@ eventuatelocal.kafka.bootstrap.servers=${EVENTUATELOCAL_KAFKA_BOOTSTRAP_SERVERS}
 eventuatelocal.zookeeper.connection.string=${EVENTUATELOCAL_ZOOKEEPER_CONNECTION_STRING}
 
 spring.data.mongodb.uri=mongodb://${MONGO_URL}:27017/data
+
+inventory.size=${INVENTORY_SIZE}
