split config, added profiles, make tests use new 'test' profile

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,3 +9,7 @@ eventuatelocal.zookeeper.connection.string=${EVENTUATELOCAL_ZOOKEEPER_CONNECTION
 spring.data.mongodb.uri=mongodb://${MONGO_URL}:27017/data
 
 inventory.size=${INVENTORY_SIZE}
+
+## set to 'test' to run application without additional things.
+## set to 'saga' to run application with cdc and jpa and everything.
+spring.profiles.active=saga
