--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,6 +9,8 @@ eventuatelocal.zookeeper.connection.string=${EVENTUATELOCAL_ZOOKEEPER_CONNECTION
 spring.data.mongodb.uri=mongodb://${MONGO_URL}:27017/data
 
 inventory.size=${INVENTORY_SIZE}
+t2.cart.url=${T2_CART_URL}
+
 
 ## set to 'test' to run application without additional things.
 ## set to 'saga' to run application with cdc and jpa and everything.
