--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -15,7 +15,7 @@ jobs:
     - name: check out common
       uses: actions/checkout@master
       with:
-        repository: t2/common
+        repository: t2-project/common
         token: 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
     - name: set up jdk
       uses: actions/setup-java@v2
