--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -21,7 +21,7 @@ jobs:
       with:
         distribution: 'adopt' 
         java-version: '11' 
-    run: |
+    - run: |
         pwd    
 #    - name: Maven Package
 #      run: mvn clean package
