--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -13,6 +13,7 @@ jobs:
     steps:
     - name: check out inventory
       uses: actions/checkout@v2
+        pat: './inventory'
     - run: |
         mkdir common
     - name: check out common
@@ -21,17 +22,25 @@ jobs:
         repository: t2-project/common
         path: './common'
     - run: |
-        cd ..
         pwd
+        echo "<?xml version=\"1.0\" encoding=\"UTF-8\"?>
+<project xmlns=\"http://maven.apache.org/POM/4.0.0\" xmlns:xsi=\"http://www.w3.org/2001/XMLSchema-instance\"
+    xsi:schemaLocation=\"http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd\">
+    <modelVersion>4.0.0</modelVersion>
+    <groupId>org.springframework</groupId>
+    <artifactId>gs-multi-module</artifactId>
+    <version>0.1.0</version>
+    <packaging>pom</packaging>
+    <modules>
+        <module>common</module>
+        <module>inventory</module>
+    </modules>
+</project> " > pom.xml 
     - name: set up jdk
       uses: actions/setup-java@v2
       with:
         distribution: 'adopt' 
         java-version: '11' 
-    - run: |
-        pwd  
-        ls -lah  
-        cat pom.xml
     - name: Maven Package
       run: mvn clean package
     - name: Maven Verify
