--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,8 +2,7 @@ name: main branch
 on:
   push:
     branches:
-#      - 'main'
-      - ci
+      - 'main'
 
 jobs:
   test:
@@ -15,8 +14,6 @@ jobs:
       uses: actions/checkout@v2
       with:
         path: './inventory'
-    - run: |
-        mkdir common
     - name: check out common
       uses: actions/checkout@master
       with:
