--- a/.github/workflows/dockerhub.yml
+++ b/.github/workflows/dockerhub.yml
@@ -10,8 +10,6 @@ jobs:
     name: Push Docker image to Docker Hub
     runs-on: ubuntu-latest
     steps:
-    - name: Check out the repo
-      uses: actions/checkout@v2
     - name: Login to DockerHub
       uses: docker/login-action@v1 
       with:
@@ -38,8 +36,10 @@ jobs:
       run: mvn clean install
     - name: Build and push (manual
       run: |
+        ls *
+        cd inventory
         pwd
-        ls
+        ls *
         docker build -t stiesssh/inventory:test1 .
         docker push stiesssh/inventory:test1
         
