--- a/.github/workflows/dockerhub.yml
+++ b/.github/workflows/dockerhub.yml
@@ -1,4 +1,4 @@
-name: Publish Docker image
+name: build and push docker image
 on:
   push:
     branches: 
@@ -25,7 +25,6 @@ jobs:
         repository: t2-project/common
         path: './common'
     - run: |
-        pwd
         echo "<?xml version=\"1.0\" encoding=\"UTF-8\"?><project xmlns=\"http://maven.apache.org/POM/4.0.0\" xmlns:xsi=\"http://www.w3.org/2001/XMLSchema-instance\" xsi:schemaLocation=\"http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd\"> <modelVersion>4.0.0</modelVersion> <groupId>org.springframework</groupId> <artifactId>gs-multi-module</artifactId> <version>0.1.0</version> <packaging>pom</packaging> <modules> <module>common</module> <module>inventory</module> </modules></project>" > pom.xml
     - name: set up jdk
       uses: actions/setup-java@v2
@@ -34,12 +33,8 @@ jobs:
         java-version: '11'
     - name: Maven Install
       run: mvn clean install
-    - name: Build and push (manual
+    - name: Build and push (manual)
       run: |
-        ls *
-        cd inventory
-        pwd
-        ls *
         docker build -t stiesssh/inventory:test1 .
         docker push stiesssh/inventory:test1
         
