updated ci action

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,8 +1,8 @@
-name: main branch
+name: better_mvn branch
 on:
   push:
     branches:
-      - 'main'
+      - 'better_mvn'
 
 jobs:
   test:
@@ -21,13 +21,18 @@ jobs:
         path: './common'
     - run: |
         pwd
-        echo "<?xml version=\"1.0\" encoding=\"UTF-8\"?><project xmlns=\"http://maven.apache.org/POM/4.0.0\" xmlns:xsi=\"http://www.w3.org/2001/XMLSchema-instance\" xsi:schemaLocation=\"http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd\"> <modelVersion>4.0.0</modelVersion> <groupId>org.springframework</groupId> <artifactId>gs-multi-module</artifactId> <version>0.1.0</version> <packaging>pom</packaging> <modules> <module>common</module> <module>inventory</module> </modules></project>" > pom.xml
+        cd ./common
     - name: set up jdk
       uses: actions/setup-java@v2
       with:
         distribution: 'adopt'
         java-version: '11'
-    - name: Maven Package
-      run: mvn clean package
-    - name: Maven Verify
+    - name: build common
+      run: mvn clean install
+    - name: install common
+      run: mvn install:install-file -Dfile=./target/common-1.0-SNAPSHOT.jar  -DpomFile=./pom.xml
+    - run: |
+        cd ../inventory
+        pwd
+    - name: verify inventory
       run: mvn clean verify
