--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -38,6 +38,8 @@ jobs:
     - name: Build and push (manual)
       run: |
         echo "RELEASE_VERSION=${GITHUB_REF#refs/*/}" >> $GITHUB_ENV
+        echo ${{ env.RELEASE_VERSION }}
+        echo $RELEASE_VERSION
         cd inventory
         docker build -t stiesssh/inventory:${{ env.RELEASE_VERSION }} .
         docker push stiesssh/inventory:${{ env.RELEASE_VERSION }}
