--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,8 +1,6 @@
 name: better_mvn branch
-on:
-  push:
-    branches:
-      - 'better_mvn'
+on: push
+
 jobs:
   test:
     name: unit test
@@ -29,19 +27,3 @@ jobs:
       run: cd common && mvn install:install-file -Dfile=./target/common-1.0-SNAPSHOT.jar  -DpomFile=./pom.xml
     - name: verify inventory
       run: cd inventory && mvn clean verify
-#
-    - name: Login to DockerHub
-      uses: docker/login-action@v1
-      with:
-        username: ${{ secrets.DOCKERHUB_USERNAME }}
-        password: ${{ secrets.DOCKERHUB_TOKEN }}
-    - run: |
-        echo ${GITHUB_REF}
-        echo "RELEASE_VERSION=${GITHUB_REF#refs/*/}" >> $GITHUB_ENV
-    - name: Build and push (manual)
-      run: |
-        echo ${{ env.RELEASE_VERSION }}
-        echo $RELEASE_VERSION
-        cd inventory
-        docker build -t stiesssh/inventory:${{ env.RELEASE_VERSION }} .
-        docker push stiesssh/inventory:${{ env.RELEASE_VERSION }}
