--- a/.github/workflows/dockerhub.yml
+++ b/.github/workflows/dockerhub.yml
@@ -2,11 +2,11 @@ name: build and push docker image
 on:
   push:
     branches: 
-      - 'ci'
+      - 'main'
 #  release:
 #    types: [published]
 jobs:
-  push_to_registry:
+  dockerhub:
     name: Push Docker image to Docker Hub
     runs-on: ubuntu-latest
     steps:
@@ -24,20 +24,28 @@ jobs:
       with:
         repository: t2-project/common
         path: './common'
-    - run: |
-        echo "<?xml version=\"1.0\" encoding=\"UTF-8\"?><project xmlns=\"http://maven.apache.org/POM/4.0.0\" xmlns:xsi=\"http://www.w3.org/2001/XMLSchema-instance\" xsi:schemaLocation=\"http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd\"> <modelVersion>4.0.0</modelVersion> <groupId>org.springframework</groupId> <artifactId>gs-multi-module</artifactId> <version>0.1.0</version> <packaging>pom</packaging> <modules> <module>common</module> <module>inventory</module> </modules></project>" > pom.xml
     - name: set up jdk
       uses: actions/setup-java@v2
       with:
         distribution: 'adopt'
         java-version: '11'
-    - name: Maven Install
-      run: mvn clean install
+    - name: build common
+      run: cd common && mvn clean install
+    - name: install common
+      run: cd common && mvn install:install-file -Dfile=./target/common-1.0-SNAPSHOT.jar  -DpomFile=./pom.xml
+    - name: verify inventory
+      run: cd inventory && mvn clean install
+#
+    - run: |
+        echo "RELEASE_VERSION=${GITHUB_REF#refs/*/}" >> $GITHUB_ENV
     - name: Build and push (manual)
       run: |
-        ls *
+        echo ${{ env.RELEASE_VERSION }}
+        echo $RELEASE_VERSION
         cd inventory
-        docker build -t stiesssh/inventory:test1 .
-        docker push stiesssh/inventory:test1
-        
-
+# that's how i do tags:
+        docker build -t stiesssh/inventory:v0.1.0 .
+        docker push stiesssh/inventory:v0.1.0
+# that's how cool kids do tags:       
+#        docker build -t stiesssh/inventory:${{ env.RELEASE_VERSION }} .
+#        docker push stiesssh/inventory:${{ env.RELEASE_VERSION }}
