--- a/.github/workflows/dockerhub.yml
+++ b/.github/workflows/dockerhub.yml
@@ -36,6 +36,9 @@ jobs:
     - name: verify inventory
       run: cd inventory && mvn clean install
 #
+# that's how cool kids would do their tags:       
+#        docker build -t stiesssh/inventory:${{ env.RELEASE_VERSION }} .
+#        docker push stiesssh/inventory:${{ env.RELEASE_VERSION }}
     - run: |
         echo "RELEASE_VERSION=${GITHUB_REF#refs/*/}" >> $GITHUB_ENV
     - name: Build and push (manual)
@@ -43,9 +46,5 @@ jobs:
         echo ${{ env.RELEASE_VERSION }}
         echo $RELEASE_VERSION
         cd inventory
-# that's how i do tags:
         docker build -t stiesssh/inventory:v0.1.0 .
         docker push stiesssh/inventory:v0.1.0
-# that's how cool kids do tags:       
-#        docker build -t stiesssh/inventory:${{ env.RELEASE_VERSION }} .
-#        docker push stiesssh/inventory:${{ env.RELEASE_VERSION }}
