changed @value in generator (for the better)

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,7 +8,8 @@ eventuatelocal.zookeeper.connection.string=${EVENTUATELOCAL_ZOOKEEPER_CONNECTION
 
 spring.data.mongodb.uri=mongodb://${MONGO_URL}:27017/data
 
-inventory.size=${INVENTORY_SIZE}
+## size as integer pls
+t2.inventory.size=${INVENTORY_SIZE} 
 t2.cart.url=${T2_CART_URL}
 
 
