--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,4 @@
+### INVENTORY ###
 spring.datasource.url=${SPRING_DATASOURCE_URL}
 spring.datasource.username=${SPRING_DATASOURCE_USERNAME}
 spring.datasource.password=${SPRING_DATASOURCE_PASSWORD}
@@ -15,4 +16,4 @@ t2.cart.url=${T2_CART_URL}
 
 ## set to 'test' to run application without additional things.
 ## set to 'saga' to run application with cdc and jpa and everything.
-spring.profiles.active=saga
+spring.profiles.active=${SPRING_PROFILE_ACTIVE}
