--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,7 +10,9 @@ eventuatelocal.zookeeper.connection.string=${EVENTUATELOCAL_ZOOKEEPER_CONNECTION
 spring.data.mongodb.uri=mongodb://${MONGO_URL}:27017/data
 
 ## size as integer pls
-t2.inventory.size=${INVENTORY_SIZE} 
+t2.inventory.size=${INVENTORY_SIZE}
+t2.inventory.TTL=${T2_INVENTORY_TTL}
+t2.inventory.taskRate=${T2_INVENTORY_TASKRATE} 
 t2.cart.url=${T2_CART_URL}
 
 
