--- a/pom.xml
+++ b/pom.xml
@@ -18,14 +18,14 @@
 		<java.version>8</java.version>
 	</properties>
 
-
+<!--
 	<repositories>
 		<repository>
 			<id>eventuate-tram-repos</id>
 			<name>eventuate-tram-repos</name>
 			<url>https://jcenter.bintray.com/</url>
 		</repository>
-	</repositories>
+	</repositories> -->
 
 	<dependencies>
 		<dependency>
@@ -45,13 +45,12 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-data-rest</artifactId>
 		</dependency>
-		
-		<!-- also for saga -->
+
+		<!-- for saga message / instance db-->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-data-jpa</artifactId>
 		</dependency>
-
 
 
 		<!-- SAGA THINGS -->
@@ -59,24 +58,24 @@
 		<dependency>
 			<groupId>io.eventuate.tram.core</groupId>
 			<artifactId>eventuate-tram-spring-events</artifactId>
-			<version>0.26.1.RELEASE</version>
+			<version>${TRAM_VERSION}</version>
 		</dependency>
 		<dependency>
 			<groupId>io.eventuate.tram.core</groupId>
 			<artifactId>eventuate-tram-spring-commands</artifactId>
-			<version>0.26.1.RELEASE</version>
+			<version>${TRAM_VERSION}</version>
 		</dependency>
 		<dependency>
 			<groupId>io.eventuate.tram.core</groupId>
 			<artifactId>eventuate-tram-spring-messaging</artifactId>
-			<version>0.26.1.RELEASE</version>
+			<version>${TRAM_VERSION}</version>
 		</dependency>
 
 		<!-- https://mvnrepository.com/artifact/io.eventuate.tram.sagas/eventuate-tram-sagas-spring-participant -->
 		<dependency>
 			<groupId>io.eventuate.tram.sagas</groupId>
 			<artifactId>eventuate-tram-sagas-spring-participant</artifactId>
-			<version>0.15.2.RELEASE</version>
+			<version>${TRAM_PARTICIPANT_VERSION}</version>
 		</dependency>
 
 		<!-- FOR THE CDC -->
@@ -84,20 +83,27 @@
 		<dependency>
 			<groupId>io.eventuate.tram.core</groupId>
 			<artifactId>eventuate-tram-spring-producer-jdbc</artifactId>
-			<version>0.26.1.RELEASE</version>
+			<version>${TRAM_VERSION}</version>
 		</dependency>
 		<!-- https://mvnrepository.com/artifact/io.eventuate.tram.core/eventuate-tram-spring-consumer-jdbc -->
 		<dependency>
 			<groupId>io.eventuate.tram.core</groupId>
 			<artifactId>eventuate-tram-spring-consumer-jdbc</artifactId>
-			<version>0.26.1.RELEASE</version>
+			<version>${TRAM_VERSION}</version>
 		</dependency>
 
 		<!-- https://mvnrepository.com/artifact/io.eventuate.tram.core/eventuate-tram-spring-consumer-kafka -->
 		<dependency>
 			<groupId>io.eventuate.tram.core</groupId>
 			<artifactId>eventuate-tram-spring-consumer-kafka</artifactId>
-			<version>0.24.0.RELEASE</version>
+			<version>${TRAM_VERSION}</version>
+		</dependency>
+
+		<!-- https://mvnrepository.com/artifact/io.eventuate.tram.core/eventuate-tram-spring-optimistic-locking -->
+		<dependency>
+			<groupId>io.eventuate.tram.core</groupId>
+			<artifactId>eventuate-tram-spring-optimistic-locking</artifactId>
+			<version>${TRAM_VERSION}</version>
 		</dependency>
 
 		<!-- common things -->
@@ -107,7 +113,7 @@
 			<version>1.0-SNAPSHOT</version>
 		</dependency>
 
-		<!-- TESTS?!?! -->
+		<!-- db for unit test -->
 		<dependency>
 			<groupId>de.flapdoodle.embed</groupId>
 			<artifactId>de.flapdoodle.embed.mongo</artifactId>
