--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -19,3 +19,9 @@ t2.cart.url=${T2_CART_URL}
 ## set to 'test' to run application without additional things.
 ## set to 'saga' to run application with cdc and jpa and everything.
 spring.profiles.active=${SPRING_PROFILE_ACTIVE}
+
+opentracing.jaeger.service-name=${JAEGER_SERVICE_NAME}
+opentracing.jaeger.enabled=${JAEGER_ENABLE}
+opentracing.jaeger.udp-sender.host=${JAEGER_HOST}
+
+
