--- a/pom.xml
+++ b/pom.xml
@@ -18,7 +18,7 @@
 		<java.version>8</java.version>
 	</properties>
 
-<!--
+<!-- not necessary with newer version since they are in the default (?) maven repo
 	<repositories>
 		<repository>
 			<id>eventuate-tram-repos</id>
@@ -30,10 +30,6 @@
 	<dependencies>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-data-mongodb</artifactId>
-		</dependency>
-		<dependency>
-			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
 		</dependency>
 		<dependency>
@@ -41,6 +37,13 @@
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
+
+        <!-- for inventory db -->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-data-mongodb</artifactId>
+		</dependency>
+        <!-- generates rest endpoints for inventory db-->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-data-rest</artifactId>
@@ -54,7 +57,6 @@
 
 
 		<!-- SAGA THINGS -->
-		<!-- https://mvnrepository.com/artifact/io.eventuate.tram.core/eventuate-tram-spring-events -->
 		<dependency>
 			<groupId>io.eventuate.tram.core</groupId>
 			<artifactId>eventuate-tram-spring-events</artifactId>
@@ -70,8 +72,6 @@
 			<artifactId>eventuate-tram-spring-messaging</artifactId>
 			<version>${TRAM_VERSION}</version>
 		</dependency>
-
-		<!-- https://mvnrepository.com/artifact/io.eventuate.tram.sagas/eventuate-tram-sagas-spring-participant -->
 		<dependency>
 			<groupId>io.eventuate.tram.sagas</groupId>
 			<artifactId>eventuate-tram-sagas-spring-participant</artifactId>
@@ -79,34 +79,29 @@
 		</dependency>
 
 		<!-- FOR THE CDC -->
-		<!-- https://mvnrepository.com/artifact/io.eventuate.tram.core/eventuate-tram-spring-producer-jdbc -->
 		<dependency>
 			<groupId>io.eventuate.tram.core</groupId>
 			<artifactId>eventuate-tram-spring-producer-jdbc</artifactId>
 			<version>${TRAM_VERSION}</version>
 		</dependency>
-		<!-- https://mvnrepository.com/artifact/io.eventuate.tram.core/eventuate-tram-spring-consumer-jdbc -->
 		<dependency>
 			<groupId>io.eventuate.tram.core</groupId>
 			<artifactId>eventuate-tram-spring-consumer-jdbc</artifactId>
 			<version>${TRAM_VERSION}</version>
 		</dependency>
-
-		<!-- https://mvnrepository.com/artifact/io.eventuate.tram.core/eventuate-tram-spring-consumer-kafka -->
 		<dependency>
 			<groupId>io.eventuate.tram.core</groupId>
 			<artifactId>eventuate-tram-spring-consumer-kafka</artifactId>
 			<version>${TRAM_VERSION}</version>
 		</dependency>
-
-		<!-- https://mvnrepository.com/artifact/io.eventuate.tram.core/eventuate-tram-spring-optimistic-locking -->
+        <!-- don't remember what this is for -->
 		<dependency>
 			<groupId>io.eventuate.tram.core</groupId>
 			<artifactId>eventuate-tram-spring-optimistic-locking</artifactId>
 			<version>${TRAM_VERSION}</version>
 		</dependency>
 
-		<!-- common things -->
+		<!-- t2 common things -->
 		<dependency>
 			<groupId>de.unistuttgart.t2</groupId>
 			<artifactId>common</artifactId>
@@ -120,6 +115,12 @@
 			<scope>test</scope>
 		</dependency>
 
+        <!-- tracing -->
+        <dependency>
+	        <groupId>io.opentracing.contrib</groupId>
+		    <artifactId>opentracing-spring-jaeger-cloud-starter</artifactId>
+    		<version>${JAEGER_VERSION}</version>
+	    </dependency>
 	</dependencies>
 
 	<build>
