removed unused property

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,12 +9,10 @@ eventuatelocal.zookeeper.connection.string=${EVENTUATELOCAL_ZOOKEEPER_CONNECTION
 
 spring.data.mongodb.uri=mongodb://${MONGO_HOST}:27017/data
 
-## size as integer pls
+## size as integer
 t2.inventory.size=${INVENTORY_SIZE}
 t2.inventory.TTL=${T2_INVENTORY_TTL}
 t2.inventory.taskRate=${T2_INVENTORY_TASKRATE} 
-t2.cart.url=${T2_CART_URL}
-
 
 ## set to 'test' to run application without additional things.
 ## set to 'saga' to run application with cdc and jpa and everything.
