--- a/.github/workflows/dockerhub.yml
+++ b/.github/workflows/dockerhub.yml
@@ -1,8 +1,5 @@
 name: build and push docker image
-on:
-  push:
-    branches: 
-      - 'main'
+on: push
 #  release:
 #    types: [published]
 jobs:
@@ -14,6 +11,7 @@ jobs:
       run: |
          echo "TRAM_VERSION=${{secrets.TRAM_VERSION}}" >> $GITHUB_ENV
          echo "JAEGER_VERSION=${{secrets.JAEGER_VERSION}}" >> $GITHUB_ENV
+         echo "JACOCO_VERSION=${{secrets.JACOCO_VERSION}}" >> $GITHUB_ENV
          echo "RESILIENCE4J_VERSION=${{secrets.RESILIENCE4J_VERSION}}" >> $GITHUB_ENV
          echo "JUNIT4_VERSION=${{secrets.JUNIT4_VERSION}}" >> $GITHUB_ENV
          echo "TRAM_PARTICIPANT_VERSION=${{secrets.TRAM_PARTICIPANT_VERSION}}" >> $GITHUB_ENV
@@ -37,21 +35,16 @@ jobs:
         distribution: 'adopt'
         java-version: '11'
     - name: build common
-      run: cd common && mvn clean install
+      run: cd common && ./mvnw clean install
     - name: install common
-      run: cd common && mvn install:install-file -Dfile=./target/common-1.0-SNAPSHOT.jar  -DpomFile=./pom.xml
-    - name: verify inventory
-      run: cd inventory && mvn clean install
-#
-# that's how cool kids would do their tags:       
-#        docker build -t stiesssh/inventory:${{ env.RELEASE_VERSION }} .
-#        docker push stiesssh/inventory:${{ env.RELEASE_VERSION }}
+      run: cd common && ./mvnw install:install-file -Dfile=./target/common-1.0-SNAPSHOT.jar  -DpomFile=./pom.xml
+    - name: install inventory
+      run: cd inventory && ./mvnw clean install
     - run: |
         echo "RELEASE_VERSION=${GITHUB_REF#refs/*/}" >> $GITHUB_ENV
-    - name: Build and push (manual)
+    - name: build and push container
       run: |
         echo ${{ env.RELEASE_VERSION }}
-        echo $RELEASE_VERSION
         cd inventory
-        docker build -t stiesssh/inventory:v0.1.0 .
-        docker push stiesssh/inventory:v0.1.0
+        docker build -t stiesssh/inventory:${{ env.RELEASE_VERSION }} .
+        docker push stiesssh/inventory:${{ env.RELEASE_VERSION }}
