switched to sql database, updated tests and some constructors, removed superfluous setters

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,8 @@
-### INVENTORY ###
+### INVENTORY ##
+
+# generates table for domain data 
+spring.jpa.generate-ddl=true
+
 spring.datasource.url=${SPRING_DATASOURCE_URL}
 spring.datasource.username=${SPRING_DATASOURCE_USERNAME}
 spring.datasource.password=${SPRING_DATASOURCE_PASSWORD}
@@ -14,7 +18,7 @@ t2.inventory.size=${INVENTORY_SIZE}
 t2.inventory.TTL=${T2_INVENTORY_TTL}
 t2.inventory.taskRate=${T2_INVENTORY_TASKRATE} 
 
-## set to 'test' to run application without additional things.
+## set to 'nosaga' to run application without additional things.
 ## set to 'saga' to run application with cdc and jpa and everything.
 spring.profiles.active=${SPRING_PROFILE_ACTIVE}
 
