--- a/pom.xml
+++ b/pom.xml
@@ -41,6 +41,18 @@
 			<artifactId>spring-boot-starter-data-jpa</artifactId>
 		</dependency>
 
+		<!-- for openAPI and swagger -->
+		<dependency>
+    		<groupId>org.springdoc</groupId>
+    		<artifactId>springdoc-openapi-ui</artifactId>
+    		<version>${SPRINGDOC_VERSION}</version>
+		</dependency>
+		<dependency>
+    		<groupId>org.springdoc</groupId>
+    		<artifactId>springdoc-openapi-data-rest</artifactId>
+    		<version>${SPRINGDOC_VERSION}</version>
+		</dependency>
+		
 
 		<!-- SAGA THINGS -->
 		<dependency>
