--- a/.github/workflows/dockerhub.yml
+++ b/.github/workflows/dockerhub.yml
@@ -47,5 +47,5 @@ jobs:
       run: |
         echo ${{ env.RELEASE_VERSION }}
         cd inventory
-        docker build -t stiesssh/inventory:${{ env.RELEASE_VERSION }} .
-        docker push stiesssh/inventory:${{ env.RELEASE_VERSION }}
+        docker build -t t2project/inventory:${{ env.RELEASE_VERSION }} .
+        docker push t2project/inventory:${{ env.RELEASE_VERSION }}
