--- a/pom.xml
+++ b/pom.xml
@@ -3,20 +3,14 @@
 	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
+
 	<parent>
-		<groupId>org.springframework.boot</groupId>
-		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>2.4.3</version>
-		<relativePath /> <!-- lookup parent from repository -->
+		<groupId>de.unistuttgart.t2</groupId>
+		<artifactId>t2store</artifactId>
+		<version>${t2.version}</version>
 	</parent>
-	<groupId>de.unistuttgart.t2</groupId>
 	<artifactId>inventory</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
-	<name>inventory</name>
 	<description>inventory for t2 store</description>
-	<properties>
-		<java.version>11</java.version>
-	</properties>
 
 	<dependencies>
 		<dependency>
@@ -45,12 +39,12 @@
 		<dependency>
     		<groupId>org.springdoc</groupId>
     		<artifactId>springdoc-openapi-ui</artifactId>
-    		<version>${SPRINGDOC_VERSION}</version>
+    		<version>${springdoc.version}</version>
 		</dependency>
 		<dependency>
     		<groupId>org.springdoc</groupId>
     		<artifactId>springdoc-openapi-data-rest</artifactId>
-    		<version>${SPRINGDOC_VERSION}</version>
+    		<version>${springdoc.version}</version>
 		</dependency>
 		
 
@@ -58,66 +52,58 @@
 		<dependency>
 			<groupId>io.eventuate.tram.core</groupId>
 			<artifactId>eventuate-tram-spring-events</artifactId>
-			<version>${TRAM_VERSION}</version>
+			<version>${io.eventuate.tram.core.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>io.eventuate.tram.core</groupId>
 			<artifactId>eventuate-tram-spring-commands</artifactId>
-			<version>${TRAM_VERSION}</version>
+			<version>${io.eventuate.tram.core.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>io.eventuate.tram.core</groupId>
 			<artifactId>eventuate-tram-spring-messaging</artifactId>
-			<version>${TRAM_VERSION}</version>
+			<version>${io.eventuate.tram.core.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>io.eventuate.tram.sagas</groupId>
 			<artifactId>eventuate-tram-sagas-spring-participant</artifactId>
-			<version>${TRAM_PARTICIPANT_VERSION}</version>
+			<version>${io.eventuate.tram.sagas.version}</version>
 		</dependency>
 
 		<!-- FOR THE CDC -->
 		<dependency>
 			<groupId>io.eventuate.tram.core</groupId>
 			<artifactId>eventuate-tram-spring-producer-jdbc</artifactId>
-			<version>${TRAM_VERSION}</version>
+			<version>${io.eventuate.tram.core.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>io.eventuate.tram.core</groupId>
 			<artifactId>eventuate-tram-spring-consumer-jdbc</artifactId>
-			<version>${TRAM_VERSION}</version>
+			<version>${io.eventuate.tram.core.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>io.eventuate.tram.core</groupId>
 			<artifactId>eventuate-tram-spring-consumer-kafka</artifactId>
-			<version>${TRAM_VERSION}</version>
+			<version>${io.eventuate.tram.core.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>io.eventuate.tram.core</groupId>
 			<artifactId>eventuate-tram-spring-optimistic-locking</artifactId>
-			<version>${TRAM_VERSION}</version>
+			<version>${io.eventuate.tram.core.version}</version>
 		</dependency>
 
 		<!-- t2 common things -->
 		<dependency>
 			<groupId>de.unistuttgart.t2</groupId>
 			<artifactId>common</artifactId>
-			<version>1.0-SNAPSHOT</version>
+			<version>${t2.version}</version>
 		</dependency>
-        
-        <!-- embedded database for unit tests -->
-        <dependency>
-            <groupId>com.h2database</groupId>
-            <artifactId>h2</artifactId>
-            <version>1.4.200</version>
-            <scope>test</scope>
-        </dependency>
 
         <!-- tracing, monitoring -->
         <dependency>
 	        <groupId>io.opentracing.contrib</groupId>
 		    <artifactId>opentracing-spring-jaeger-cloud-starter</artifactId>
-    		<version>${JAEGER_VERSION}</version>
+    		<version>${jaeger.version}</version>
 	    </dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
@@ -126,7 +112,7 @@
 	    <dependency>
             <groupId>io.micrometer</groupId>
             <artifactId>micrometer-registry-prometheus</artifactId>
-            <version>${MICROMETER_VERSION}</version>
+            <version>${micrometer.version}</version>
         </dependency>
 	</dependencies>
 
@@ -139,7 +125,7 @@
             <plugin>
                 <groupId>org.jacoco</groupId>
                 <artifactId>jacoco-maven-plugin</artifactId>
-                <version>${JACOCO_VERSION}</version>
+                <version>${jacoco.version}</version>
                 <executions>
                     <execution>
                         <goals>
