--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@
     <artifactId>inventory</artifactId>
     <version>0.0.1-SNAPSHOT</version>
     <name>inventory</name>
-    <description>inventory for t2 store</description>
+    <description>inventory for T2-Project</description>
     <properties>
         <java.version>11</java.version>
     </properties>
