--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,10 +3,17 @@
 # generates table for domain data 
 spring.jpa.generate-ddl=true
 
+spring.application.name=inventory
+
 spring.datasource.url=${SPRING_DATASOURCE_URL}
 spring.datasource.username=${SPRING_DATASOURCE_USERNAME}
 spring.datasource.password=${SPRING_DATASOURCE_PASSWORD}
 spring.datasource.driver-class-name=${SPRING_DATASOURCE_DRIVER_CLASS_NAME}
+
+
+spring.sleuth.enabled=true
+spring.sleuth.sampler.probability=1
+spring.zipkin.baseUrl=${ZIPKIN_BASEURL}
 
 eventuatelocal.kafka.bootstrap.servers=${EVENTUATELOCAL_KAFKA_BOOTSTRAP_SERVERS}
 eventuatelocal.zookeeper.connection.string=${EVENTUATELOCAL_ZOOKEEPER_CONNECTION_STRING}
@@ -21,10 +28,6 @@ t2.inventory.taskRate=${T2_INVENTORY_TASKRATE}
 ## set to 'nosaga' to run application without additional things.
 ## set to 'saga' to run application with cdc and jpa and everything.
 spring.profiles.active=${SPRING_PROFILE_ACTIVE}
-
-opentracing.jaeger.service-name=${JAEGER_SERVICE_NAME}
-opentracing.jaeger.enabled=${JAEGER_ENABLE}
-opentracing.jaeger.udp-sender.host=${JAEGER_HOST}
 
 management.endpoints.web.exposure.include: prometheus, health
 management.endpoints.health.show-details: always
