Fix spring profiles configuration

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -20,7 +20,7 @@ t2.inventory.taskRate=${T2_INVENTORY_TASKRATE}
 
 ## set to 'nosaga' to run application without additional things.
 ## set to 'saga' to run application with cdc and jpa and everything.
-spring.profiles.active=${SPRING_PROFILE_ACTIVE}
+spring.profiles.active=${SPRING_PROFILES_ACTIVE}
 
 opentracing.jaeger.service-name=${JAEGER_SERVICE_NAME}
 opentracing.jaeger.enabled=${JAEGER_ENABLE}
