Improve JPA configuration

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,11 +4,12 @@ info.app.version='@project.version@'
 
 # generates table for domain data 
 spring.jpa.generate-ddl=true
+spring.jpa.open-in-view=false
 
 spring.datasource.url=${SPRING_DATASOURCE_URL}
 spring.datasource.username=${SPRING_DATASOURCE_USERNAME}
 spring.datasource.password=${SPRING_DATASOURCE_PASSWORD}
-spring.datasource.driver-class-name=${SPRING_DATASOURCE_DRIVER_CLASS_NAME}
+spring.datasource.driver-class-name=${SPRING_DATASOURCE_DRIVER_CLASS_NAME:org.postgresql.Driver}
 
 eventuatelocal.kafka.bootstrap.servers=${EVENTUATELOCAL_KAFKA_BOOTSTRAP_SERVERS}
 eventuatelocal.zookeeper.connection.string=${EVENTUATELOCAL_ZOOKEEPER_CONNECTION_STRING}
