--- a/.github/workflows/dockerhub.yml
+++ b/.github/workflows/dockerhub.yml
@@ -16,32 +16,32 @@ jobs:
          vi setenv.sh -c ':%s/^export //' -c ':%s/\(.*\)#.*/\1/' -c ':%s/\s*$//g' -c ':wq' # Strip out 'export ' at the beginning, comments, and trailing whitespace
          cat setenv.sh >> $GITHUB_ENV
     - name: Login to DockerHub
-      uses: docker/login-action@v1 
+      uses: docker/login-action@v3 
       with:
         username: ${{ secrets.DOCKERHUB_USERNAME }}
         password: ${{ secrets.DOCKERHUB_TOKEN }}
     - name: check out inventory
-      uses: actions/checkout@v2
+      uses: actions/checkout@v4
       with:
         path: './inventory'
     - name: check out common
-      uses: actions/checkout@master
+      uses: actions/checkout@v4
       with:
         repository: t2-project/common
         path: './common'
     - name: set up jdk
-      uses: actions/setup-java@v3
+      uses: actions/setup-java@v4
       with:
         distribution: 'temurin'
         java-version: '17'
         cache: 'maven'
-    - name: build common
+    - name: Maven build common
       run: cd common && ./mvnw clean install
     - name: install inventory
       run: cd inventory && ./mvnw clean install
     - run: |
         echo "RELEASE_VERSION=${GITHUB_REF#refs/*/}" >> $GITHUB_ENV
-    - name: build and push container
+    - name: Docker build and push (manual)
       run: |
         echo ${{ env.RELEASE_VERSION }}
         cd inventory
