Separate PostgreSQL databases

--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -3,9 +3,9 @@
 
 server.port=8082
 
-spring.datasource.url=jdbc:postgresql://localhost:5432/eventuate
-spring.datasource.username=eventuate
-spring.datasource.password=eventuate
+spring.datasource.url=jdbc:postgresql://localhost:5433/inventory
+spring.datasource.username=inventory
+spring.datasource.password=inventory
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 eventuatelocal.kafka.bootstrap.servers=localhost:9092
