--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,8 +14,6 @@ spring.datasource.driver-class-name=${SPRING_DATASOURCE_DRIVER_CLASS_NAME:org.po
 eventuatelocal.kafka.bootstrap.servers=${EVENTUATELOCAL_KAFKA_BOOTSTRAP_SERVERS}
 eventuatelocal.zookeeper.connection.string=${EVENTUATELOCAL_ZOOKEEPER_CONNECTION_STRING}
 
-spring.data.mongodb.uri=mongodb://${MONGO_HOST}:27017/data
-
 ## size as integer
 t2.inventory.size=${T2_INVENTORY_SIZE}
 t2.inventory.TTL=${T2_INVENTORY_TTL}
@@ -29,14 +27,14 @@ opentracing.jaeger.service-name=inventory
 opentracing.jaeger.enabled=${T2_JAEGER_ENABLED}
 opentracing.jaeger.udp-sender.host=${T2_JAEGER_HOST}
 
-management.endpoints.web.exposure.include: prometheus, health
+management.endpoints.web.exposure.include=prometheus, health
 
-management.metrics.tags.application: inventory
-management.metrics.distribution.percentiles.all: 0.5, 0.75, 0.95, 0.98, 0.99, 0.999, 1.0
+management.metrics.tags.application=inventory
+management.metrics.distribution.percentiles.all=0.5, 0.75, 0.95, 0.98, 0.99, 0.999, 1.0
 
-management.endpoint.health.probes.enabled: true
-management.endpoint.health.show-details: always
-management.health.livenessState.enabled: true
-management.health.readinessState.enabled: true
+management.endpoint.health.probes.enabled=true
+management.endpoint.health.show-details=always
+management.health.livenessState.enabled=true
+management.health.readinessState.enabled=true
 
 eventuate.outbox.id=2
