Add schema name

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,6 +5,7 @@ info.app.version='@project.version@'
 # generates table for domain data 
 spring.jpa.generate-ddl=true
 spring.jpa.open-in-view=false
+spring.jpa.properties.jakarta.persistence.create-database-schemas=true
 
 spring.datasource.url=${SPRING_DATASOURCE_URL}
 spring.datasource.username=${SPRING_DATASOURCE_USERNAME}
