Add new property 'setUnitsToMax'

--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -15,6 +15,7 @@ eventuatelocal.zookeeper.connection.string=localhost:2181
 t2.inventory.size=25
 t2.inventory.TTL=0
 t2.inventory.taskRate=0
+t2.inventory.setUnitsToMax=true
 
 ## set to 'nosaga' to run application without additional things.
 ## set to 'saga' to run application with cdc and jpa and everything.
