--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -19,6 +19,7 @@ eventuatelocal.zookeeper.connection.string=${EVENTUATELOCAL_ZOOKEEPER_CONNECTION
 t2.inventory.size=${T2_INVENTORY_SIZE}
 t2.inventory.TTL=${T2_INVENTORY_TTL}
 t2.inventory.taskRate=${T2_INVENTORY_TASKRATE}
+t2.inventory.setUnitsToMax=${T2_INVENTORY_SET_UNITS_TO_MAX}
 
 ## set to 'nosaga' to run application without additional things.
 ## set to 'saga' to run application with cdc and jpa and everything.
